--- a/style.css
+++ b/style.css
@@ -6,23 +6,23 @@
 
 @keyframes runing {
   0% {
-    transform: translate(300px, 300px);
-    background-color: green;
-  }
-  25% {
-    transform: translate(300px, 0);
-    background-color: yellow;
-  }
-  50% {
     transform: translate(0, 0);
     background-color: red;
   }
-  75% {
+  25% {
     transform: translate(0, 300px);
     background-color: blue;
   }
-  100% {
+  50% {
     transform: translate(300px, 300px);
     background-color: green;
+  }
+  75% {
+    transform: translate(300px, 0);
+    background-color: yellow;
+  }
+  100% {
+    transform: translate(0, 0);
+    background-color: red;
   }
 }
